--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -98,7 +98,16 @@
                                 <ul class="hidden">
                                     <li><a href="/user-guide/views#files">Files</a></li>
                                     <li><a href="/user-guide/views#streams">Streams</a></li>
-                                    <li><a href="/user-guide/views#syntax">Stream Syntax</a></li>
+                                    <li>
+                                        <a href="/user-guide/views#syntax">Stream Syntax</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/views#scalars">Scalars</a></li>
+                                            <li class="mb-2"><a href="/user-guide/views#arrays-loops">Arrays/Loops</a></li>
+                                            <li class="mb-2"><a href="/user-guide/views#conditionals">Conditionals</a></li>
+                                            <li class="mb-2"><a href="/user-guide/views#includes">Includes</a></li>
+                                            <li class="mb-2"><a href="/user-guide/views#inheritance">Inheritance</a></li>
+                                        </ul>
+                                    </li>
                                     <li><a href="/user-guide/views#filtering">Filtering</a></li>
                                 </ul>
                             </li>
