--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -111,7 +111,44 @@
                                     <li><a href="/user-guide/views#filtering">Filtering</a></li>
                                 </ul>
                             </li>
-                            <li><a href="/user-guide/http">HTTP</a></li>
+                            <li>
+                                <a href="/user-guide/http">HTTP</a>
+                                <ul class="hidden">
+                                    <li>
+                                        <a href="/user-guide/http#client">Client</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/http#quickstart">Quickstart</a></li>
+                                            <li class="mb-2"><a href="/user-guide/http#auth">Auth</a></li>
+                                            <li class="mb-2"><a href="/user-guide/http#options">Options</a></li>
+                                            <li class="mb-2"><a href="/user-guide/http#content-negotiation">Content Negotiation</a></li>
+                                            <li class="mb-2"><a href="/user-guide/http#requests">Requests</a></li>
+                                            <li class="mb-2"><a href="/user-guide/http#rendering-requests">Rendering Requests</a></li>
+                                            <li class="mb-2"><a href="/user-guide/http#responses">Responses</a></li>
+                                            <li class="mb-2"><a href="/user-guide/http#handlers">Handlers</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="/user-guide/http#promises">Promises</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/http#wait">Wait</a></li>
+                                            <li class="mb-2"><a href="/user-guide/http#then">Then</a></li>
+                                            <li class="mb-2"><a href="/user-guide/http#forwarding">Forwarding</a></li>
+                                            <li class="mb-2"><a href="/user-guide/http#nesting">Nesting</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="/user-guide/http#server">Server</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/http#request-headers-data">Request Headers/Data</a></li>
+                                            <li class="mb-2"><a href="/user-guide/http#filtering">Filtering</a></li>
+                                            <li class="mb-2"><a href="/user-guide/http#redirect-forwards">Redirects/Forwards</a></li>
+                                            <li class="mb-2"><a href="/user-guide/http#rendering-responses">Rendering Responses</a></li>
+                                            <li class="mb-2"><a href="/user-guide/http#uploads">Uploads</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="/user-guide/http#cli-conversion">CLI Conversion</a></li>
+                                </ul>
+                            </li>
                             <li><a href="/user-guide/console">Console</a></li>
                             <li><a href="/user-guide/databases">Databases</a></li>
                             <li><a href="/user-guide/sessions">Sessions</a></li>
