--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -80,7 +80,15 @@
                                 <ul class="hidden">
                                     <li><a href="/getting-started/kettle#init">Initializing an Application</a></li>
                                     <li><a href="/getting-started/kettle#include">Kettle Include</a></li>
-                                    <li><a href="/getting-started/kettle#databases">Managing Databases</a></li>
+                                    <li>
+                                        <a href="/getting-started/kettle#databases">Managing Databases</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/getting-started/kettle#installing">Installing the Database</a></li>
+                                            <li class="mb-2"><a href="/getting-started/kettle#seeding">Seeding the Database</a></li>
+                                            <li class="mb-2"><a href="/getting-started/kettle#migrations">Database Migrations</a></li>
+                                            <li class="mb-2"><a href="/getting-started/kettle#migration-state">Migration State Storage</a></li>
+                                        </ul>
+                                    </li>
                                     <li><a href="/getting-started/kettle#creating">Creating App Files</a></li>
                                     <li><a href="/getting-started/kettle#web-server">Web Server</a></li>
                                     <li><a href="/getting-started/kettle#accessing">Accessing the App</a></li>
