--- a/app/view/getting-started/applications.phtml
+++ b/app/view/getting-started/applications.phtml
@@ -124,9 +124,9 @@ $app = new Pop\Application($autoloader, [
                     <pre><code class="language-php">$app->run(); // $app->run($exit, $forceRoute);</code><a href="#" title="Copy" class="copy-link" onclick="copyCode(this); return false;"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 relative"><path stroke-linecap="round" stroke-linejoin="round" d="M8.25 7.5V6.108c0-1.135.845-2.098 1.976-2.192.373-.03.748-.057 1.123-.08M15.75 18H18a2.25 2.25 0 002.25-2.25V6.108c0-1.135-.845-2.098-1.976-2.192a48.424 48.424 0 00-1.123-.08M15.75 18.75v-1.875a3.375 3.375 0 00-3.375-3.375h-1.5a1.125 1.125 0 01-1.125-1.125v-1.5A3.375 3.375 0 006.375 7.5H5.25m11.9-3.664A2.251 2.251 0 0015 2.25h-1.5a2.251 2.251 0 00-2.15 1.586m5.8 0c.065.21.1.433.1.664v.75h-6V4.5c0-.231.035-.454.1-.664M6.75 7.5H4.875c-.621 0-1.125.504-1.125 1.125v12c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125V16.5a9 9 0 00-9-9z" /></svg></a></pre>
                     <p>The first parameter <code class="inline-code">$exit</code> is a boolean flag that will be passed down to the router and allow
                         the router to determine how to exit the application if a route is not found. By default, it's
-                        set to `true`, so the application exits out whenever a route is not found. However, if you
+                        set to <code class="inline-code">true</code>, so the application exits out whenever a route is not found. However, if you
                         wanted the application to not exit for any reason after a failed route match, you can set that
-                        flag to `false`.</p>
+                        flag to <code class="inline-code">false</code>.</p>
                     <p>The second optional parameter <code class="inline-code">$forceRoute</code> allows for an override and forces the application to
                         run the provided route. This is useful when the application object is passed to other services,
                         for example, a queue service, that need to trigger specific routes to run at scheduled times.</p>
