--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -157,7 +157,17 @@
                                     <li><a href="/user-guide/http#cli-conversion">CLI Conversion</a></li>
                                 </ul>
                             </li>
-                            <li><a href="/user-guide/console">Console</a></li>
+                            <li>
+                                <a href="/user-guide/console">Console</a>
+                                <ul class="hidden">
+                                    <li><a href="/user-guide/console#output">Output</a></li>
+                                    <li><a href="/user-guide/console#response-buffer">Response Buffer</a></li>
+                                    <li><a href="/user-guide/console#colors">Colors</a></li>
+                                    <li><a href="/user-guide/console#prompt">Prompt</a></li>
+                                    <li><a href="/user-guide/console#commands">Commands</a></li>
+                                    <li><a href="/user-guide/console#help-screen">Help Screen</a></li>
+                                </ul>
+                            </li>
                             <li><a href="/user-guide/databases">Databases</a></li>
                             <li><a href="/user-guide/sessions">Sessions</a></li>
                             <li><a href="/user-guide/forms">Forms</a></li>
