--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -168,7 +168,79 @@
                                     <li><a href="/user-guide/console#help-screen">Help Screen</a></li>
                                 </ul>
                             </li>
-                            <li><a href="/user-guide/databases">Databases</a></li>
+                            <li>
+                                <a href="/user-guide/databases">Databases</a>
+                                <ul class="hidden">
+                                    <li>
+                                        <a href="/user-guide/databases#quickstart">Quickstart</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/databases#connect-to-a-database">Connect to a Database</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#query-a-database">Query a Database</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#table-class">Table Class</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="/user-guide/databases#adapters">Adapters</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/databases#mysql">MySQL</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#postgresql">PostgreSQL</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#sqlite">SQLite</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#sql-server">SQL Server</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#pdo">PDO</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="/user-guide/databases#orm">ORM</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/databases#active-record">Active Record</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#encoded-record">Encoded Record</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#table-gateway">Table Gateway</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#options</">Options</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#shorthand-syntax">Shorthand Syntax</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#execute-queries">Execute Queries</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="/user-guide/databases#relationships">Relationships</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/databases#eager-loading">Eager-Loading</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="/user-guide/databases#querying">Querying</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/databases#prepared-statements">Prepared Statements</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="/user-guide/databases#query-builder">Query Builder</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/databases#select">Select</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#insert">Insert</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#update">Update</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#delete">Delete</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#joins">Joins</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#predicates">Predicates</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#nested-predicates">Nested Predicates</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#sorting-order-limits">Sorting, Order, Limits</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="/user-guide/databases#schema-builder">Schema Builder</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/databases#create-table">Create Table</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#alter-table">Alter Table</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#drop-table">Drop Table</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#execute-schema">Execute Schema</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#schema-builder-api">Schema Builder API</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="/user-guide/databases#migrator">Migrator</a></li>
+                                    <li><a href="/user-guide/databases#seeder">Seeder</a></li>
+                                    <li><a href="/user-guide/databases#sql-data">SQL Data</a></li>
+                                    <li><a href="/user-guide/databases#profiler">Profiler</a></li>
+                                </ul>
+                            </li>
                             <li><a href="/user-guide/sessions">Sessions</a></li>
                             <li><a href="/user-guide/forms">Forms</a></li>
                             <li><a href="/user-guide/images">Images</a></li>
