--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -195,7 +195,7 @@
                                             <li class="mb-2"><a href="/user-guide/databases#active-record">Active Record</a></li>
                                             <li class="mb-2"><a href="/user-guide/databases#encoded-record">Encoded Record</a></li>
                                             <li class="mb-2"><a href="/user-guide/databases#table-gateway">Table Gateway</a></li>
-                                            <li class="mb-2"><a href="/user-guide/databases#options</">Options</a></li>
+                                            <li class="mb-2"><a href="/user-guide/databases#options">Options</a></li>
                                             <li class="mb-2"><a href="/user-guide/databases#shorthand-syntax">Shorthand Syntax</a></li>
                                             <li class="mb-2"><a href="/user-guide/databases#execute-queries">Execute Queries</a></li>
                                         </ul>
