--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -268,8 +268,84 @@
                                     <li><a href="/user-guide/forms#acl-forms">ACL Forms</a></li>
                                 </ul>
                             </li>
-                            <li><a href="/user-guide/images">Images</a></li>
-                            <li><a href="/user-guide/pdfs">PDFs</a></li>
+                            <li>
+                                <a href="/user-guide/images">Images</a>
+                                <ul class="hidden">
+                                    <li>
+                                        <a href="/user-guide/images#quickstart">Quickstart</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/images#load-an-image">Load an Image</a></li>
+                                            <li class="mb-2"><a href="/user-guide/images#create-an-image">Create an Image</a></li>
+                                            <li class="mb-2"><a href="/user-guide/images#convert-an-image">Convert an Image</a></li>
+                                            <li class="mb-2"><a href="/user-guide/images#output-an-image">Output an Image</a></li>
+                                            <li class="mb-2"><a href="/user-guide/images#destroy-an-image">Destroy an Image</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="/user-guide/images#image-adapters">Image Adapters</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/images#gd">GD</a></li>
+                                            <li class="mb-2"><a href="/user-guide/images#imagick">Imagick</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="/user-guide/images#advanced-editing">Advanced Editing</a></li>
+                                    <li><a href="/user-guide/images#captcha">CAPTCHA</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/user-guide/pdfs">PDFs</a>
+                                <ul class="hidden">
+                                    <li><a href="/user-guide/pdfs#quickstart">Quickstart</a></li>
+                                    <li>
+                                        <a href="/user-guide/pdfs#pdf">PDF</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/pdfs#write-to-file">Write to File</a></li>
+                                            <li class="mb-2"><a href="/user-guide/pdfs#output-to-http">Output to HTTP</a></li>
+                                            <li class="mb-2"><a href="/user-guide/pdfs#import-from-file">Import from File</a></li>
+                                            <li class="mb-2"><a href="/user-guide/pdfs#import-from-raw-data">Import from Raw Data</a></li>
+                                            <li class="mb-2"><a href="/user-guide/pdfs#import-from-images">Import from Images</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="/user-guide/pdfs#documents">Documents</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/pdfs#compression">Compression</a></li>
+                                            <li class="mb-2"><a href="/user-guide/pdfs#page-origin">Page Origin</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="/user-guide/pdfs#pages">Pages</a></li>
+                                    <li>
+                                        <a href="/user-guide/pdfs#fonts">Fonts</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/pdfs#standard">Standard</a></li>
+                                            <li class="mb-2"><a href="/user-guide/pdfs#embedded">Embedded</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="/user-guide/pdfs#text">Text</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/pdfs#alignment">Alignment</a></li>
+                                            <li class="mb-2"><a href="/user-guide/pdfs#string-width">String Width</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="/user-guide/pdfs#images">Images</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/pdfs#image-size">Image Size</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="/user-guide/pdfs#paths">Paths</a></li>
+                                    <li>
+                                        <a href="/user-guide/pdfs#annotations">Annotations</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="/user-guide/pdfs#urls">URLs</a></li>
+                                            <li class="mb-2"><a href="/user-guide/pdfs#internal">Internal</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="/user-guide/pdfs#forms">Forms</a></li>
+                                    <li><a href="/user-guide/pdfs#html">HTML</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                     <li x-data="{open: <?=$nav5Active; ?>}">
